--- a/konami.html
+++ b/konami.html
@@ -56,7 +56,7 @@
         new Audio();
         alert('You have added 30 lives!');
         $('.logo').css({'background-image':'url("img/KONAMI.jpeg")','opacity': '.7','height':'350px', 'background-repeat':"no-repeat", 'background-size':'cover', 'margin':'0'});
-        $('body').css({'background-image': 'url("img/contra.gif")', 'background-repeat':"no-repeat", 'background-size':'cover', 'color':'yellow'});
+        $('body').css({'background-image': 'url("img/contra.gif")', 'background-repeat':"no-repeat", 'background-size':'cover', 'color':'yellow', 'margin': '0'});
         $('.lives').html('Lives: 30');
     };
 
