--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>National Parks FAQ's</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
         .invisible{
             visibility: hidden;
@@ -16,11 +17,41 @@
         .fontBlue{
             color: blue;
         }
+        .display{
+            display: none;
+        }
+        h2{
+            color: blue;
+            background-color: #fdff2d;
+            display: none;
+        }
     </style>
 </head>
 <body>
+<div class="alert alert-info alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    Would you like to sign up for our newsletter?
+</div>
 <h1>National Parks FAQ's</h1>
 <a href="">Hide dd's</a>
+<h2>Would you like to sign up for the news letter?</h2>
+<div class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                <p>One fine body&hellip;</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><
 <dl>
     <dt class="dt">How many employees are in the National Park Service?</dt>
     <dd class="dd">Permanent, temporary, and seasonal employees: More than 20,000 Volunteers: More than 315,000 in 2017</dd>
@@ -46,21 +77,21 @@
 <input class="button" type="submit">
 
 <h3 id="archesHeading">Arches</h3>
-<ul id="archesFacts">
+<ul id="archesFacts" class="display">
     <li>Arches National Park is located in southeast Utah</li>
     <li>April 12, 1929 - President Herbert Hoover signs Presidential Proclamation No. 1875 establishing Arches National Monument.</li>
     <li>There are lots of petroglyphs (pecked images) and pictographs (painted ones) on the rocks</li>
     <li>There are over 2,000 documented arches in the park, ranging from sliver-thin cracks to spans greater than 300 feet</li>
 </ul>
 <h3>Badlands</h3>
-<ul id="badlandFacts">
+<ul id="badlandFacts" class="display">
     <li>Badlands National Park is in South Dakota.</li>
     <li>Its dramatic landscapes span layered rock formations, steep canyons and towering spires. Bison, bighorn sheep and prairie dogs inhabit its sprawling grasslands.</li>
     <li>Ancient mammals such as the rhino, horse, and saber-toothed cat once roamed here.</li>
     <li>Contains one of the world’s richest fossil beds.</li>
 </ul>
 <h3>Everglades</h3>
-<ul id="evergladeFacts">
+<ul id="evergladeFacts" class="display">
     <li>Everglades National Park is a 1.5-million-acre wetlands preserve on the southern tip of the U.S. state of Florida</li>
     <li>is made up of coastal mangroves, sawgrass marshes and pine flatwoods. </li>
     <li>Among the Everglades' hundreds of wildlife species are the endangered leatherback turtle, Florida panther and West Indian manatee.</li>
@@ -68,6 +99,8 @@
 </ul>
 <script src="js/jquery-2.2.4.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script>
 
 $('a').click(function (event) {
@@ -85,13 +118,23 @@ $('.button').click(function (event) {
     $('#badlandFacts').children().last().toggleClass("bgYellow");
 });
 $('h3').click(function () {
- $(this).next(2).toggleClass('bold');
+ $(this).next().children().toggleClass('bold');
+    $(this).next().slideToggle();
 });
 
 $('li').click(function () {
     $(this).parent().children().first().toggleClass("fontBlue")
-})
+});
+$('span').click(function () {
+    $(this).parent().hide();
+});
+
+$('h2').delay(8000).fadeIn();
+
+$('#modal fade').css('data-toggle',"modal").delay(8000);
+
 
 </script>
+
 </body>
 </html>
