--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -30,24 +30,27 @@
 <body>
 <div class="alert alert-info alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    Would you like to sign up for our newsletter?
+   &emsp; Would you like to sign up for our newsletter? &emsp; <button type="button" class="yes" data-dismiss="alert" >Yes!</button> &emsp; <button type="button" class="no" data-dismiss="alert" >No!</button>
 </div>
 <h1>National Parks FAQ's</h1>
 <a href="">Hide dd's</a>
-<h2>Would you like to sign up for the news letter?</h2>
-<div class="modal fade" tabindex="-1" role="dialog">
+<h2>Would you like to sign up for the newsletter?</h2>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Modal title</h4>
+                &emsp;<h4 class="modal-title">Would you like to register for the site?</h4>
             </div>
             <div class="modal-body">
-                <p>One fine body&hellip;</p>
+                <label for="email"> Please enter Email Address: &emsp;</label>
+                <input type="text" id="email">
+                <label for="pass">Please enter a Password: &emsp;&emsp;</label>
+                <input id="pass" type="text">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn no btn-default" data-dismiss="modal">No Thanks</button>
+                <button type="button" class="btn registered btn-primary" data-dismiss="modal">Register</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
@@ -129,11 +132,28 @@ $('span').click(function () {
     $(this).parent().hide();
 });
 
-$('h2').delay(8000).fadeIn();
+$('.registered').click(function () {
+    if (!email.value || !pass.value) {
+        alert('Please enter an email and password');
+                setTimeout(function () {
+                    $('#myModal').modal();
+                }, 300);
+    } else {
+        alert("Thank you for Registering!")
+    }
+});
 
-$('#modal fade').css('data-toggle',"modal").delay(8000);
+$('.no, .close').click(function () {
+    alert("Thank you anyway!")
+});
 
+$('.yes').click(function () {
+    prompt('Please Enter Your Email:')
+});
 
+setTimeout(function() {
+    $('#myModal').modal();
+}, 8000);
 </script>
 
 </body>
