fixes to jequery

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -148,7 +148,7 @@ $('.no, .close').click(function () {
 });
 
 $('.yes').click(function () {
-    prompt('Please Enter Your Email:')
+    prompt('Please Enter Your Email:');
 });
 
 setTimeout(function() {
