--- a/ajax-store.html
+++ b/ajax-store.html
@@ -19,26 +19,56 @@
     <tbody id="insertProducts"></tbody>
 </table>
 
+</div>
+<button id="refresh">Refresh List</button>
+</div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 <script>
 (function() {
     "use strict";
+
     // TODO: Create an ajax GET request for /data/inventory.json
-   var inventory = $.ajax("data/inventory.json");
-    // TODO: Take the data from inventory.json and append it to the products table
-    //       HINT: Your data should come back as a JSON object; use console.log() to inspect
-    //             its contents and fields
-    //       HINT: You will want to target #insertProducts for your new HTML elements
-    inventory.done(function(data, status) {
-        alert("AJAX call completed successfully!");
-        console.log("Request status: " + status);
-        console.log("Data returned from server:");
-        console.log(data);
-        $.each(function (index, data) {
+    function generateInventory() {
 
-        })
+        var inventory = $.ajax("data/inventory.json");
+        // TODO: Take the data from inventory.json and append it to the products table
+        //       HINT: Your data should come back as a JSON object; use console.log() to inspect
+        //             its contents and fields
+        //       HINT: You will want to target #insertProducts for your new HTML elements
+        inventory.done(function (data, status) {
+            // alert("AJAX call completed successfully!");
+            console.log("Request status: " + status);
+            console.log("Data returned from server:");
+            console.log(data);
+            $.each(data, function (index, data) {
+                var content = "<tr>";
+                content += "<td>";
+                content += data.title;
+                content += "</td>";
+                content += "<td>";
+                content += data.quantity;
+                content += "</td>";
+                content += "<td>";
+                content += data.price;
+                content += "</td>";
+                content += "<td>";
+                content += data.categories;
+                content += "</td>";
+                content += "</tr>";
+                $('#insertProducts').append(content);
+                console.log(content);
+            })
+        });
+    }
+generateInventory();
 
+    $('#refresh').click(function(){
+        // reset my html to empty string
+        $('#insertProducts').html("");
+        // call function to append new book list
+        generateInventory();
     });
 
 })();
