--- a/requests-responses.html
+++ b/requests-responses.html
@@ -10,8 +10,9 @@
 
 
 </div>
+    <button>Refresh List</button>
 </div>
-<button type="reset">Refresh List</button>
+
 <script src="js/jquery-2.2.4.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="js/requests-responses-student.js"></script>
