--- a/ajax-store.html
+++ b/ajax-store.html
@@ -69,7 +69,9 @@
                 content += data.price;
                 content += "</td>";
                 content += "<td>";
+                content += " ";
                 content += data.categories;
+                content += " ";
                 content += "</td>";
                 content += "</tr>";
                 $('#insertProducts').append(content);
