--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <title>Blog</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        h2{
+            background-color: dimgrey;
+            color: whitesmoke;
+        }
+        #posts{
+            background-color: grey;
+            color: whitesmoke;
+        }
+        body{
+            background-color: #111111;
+        }
+    </style>
 </head>
 <body>
+<nav class="navbar navbar-dark bg-dark" style="color: white">
+    <a class="navbar-brand">My Blog!</a>
+    <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+</nav>
 
 <div id="container" class="container">
 <div id="posts">
