--- a/weather_map.html
+++ b/weather_map.html
@@ -2,54 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Weather Map</title>
+    <title id="Weather Map!"></title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet'/>
     <link rel="stylesheet" href="css/weather_map.css">
 
 </head>
 <body>
-<nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0 h1">Weather Map for </span>
+<nav class="navbar sticky-top navbar-dark bg-dark">
+    <span class="navbar-brand mb-0 h1">Weather Map!</span>
 </nav>
 <div class="card-deck m-4">
     <div class="card bg-dark">
-        <img src="" class="card-img-top " alt="weather">
+        <img src="icons/loading.gif" class="card-img-top " alt="weather">
         <div class="card-body">
             <h5 class="card-title"></h5>
-            <p class="card-text"></p>
+            <p class="card-text">Loading!</p>
         </div>
         <div class="card-footer">
             <small class="text-muted"></small>
         </div>
     </div>
     <div class="card bg-dark">
-        <img src="" class="card-img-top mid" alt="weather">
+        <img src="icons/loading.gif" class="card-img-top mid" alt="weather">
         <div class="card-body">
             <h5 class="card-title middlet"></h5>
-            <p class="card-text middle"></p>
+            <p class="card-text middle">Loading!</p>
         </div>
         <div class="card-footer">
             <small class="text-muted"></small>
         </div>
     </div>
     <div class="card bg-dark">
-        <img src="" class="card-img-top" alt='weather'>
+        <img src="icons/loading.gif" class="card-img-top" alt='weather'>
         <div class="card-body">
             <h5 class="card-title"></h5>
-            <p class="card-text"></p>
+            <p class="card-text">Loading!</p>
         </div>
         <div class="card-footer">
             <small class="text-muted"></small>
         </div>
     </div>
 </div>
-<div id="map">
-
 </div>
 <input type="text">
 <button type="submit">Search</button>
 
+<div id="map">
+
+</div>
 
 
 
@@ -75,16 +76,17 @@
         color: "limegreen",
         draggable: true
     };
+
     var marker = new mapboxgl.Marker(markerOptions)
         .setLngLat([-98.4861, 29.4260])
         .addTo(map);
 
 
+
         function onDragEnd(){
         var lngLat = marker.getLngLat();
+        }
 
-
-    }
     marker.on('dragend', function () {
         var lngLat = marker.getLngLat();
         $('.card-text').html("");
@@ -108,7 +110,8 @@
 
         var darkSky = $.get("https://cors-anywhere.herokuapp.com/https://api.darksky.net/forecast/" + darkSkyKey + "/" + lat + "," +
             long).done(function (data) {
-console.log(data);
+
+
 
             $('.card-text').html("");
             $('.card-title').html("");
@@ -240,24 +243,22 @@ console.log(data);
                     $("img").last().attr("src", "icons/partlycloudynight.svg");
                     break;
             }
-
-            $("button").click(function () {
-                var userInput = $("input").val();
-                console.log(userInput);
-                geocode(userInput, mapBoxToken)
-                    .then(function (result) {
-                        console.log(result);
-                        marker.setLngLat(result);
-                        map.flyTo({center: result});
-                        getWeather();
-                    });
-            });
         });
     }
 
     getWeather();
 
-
+    $("button").click(function () {
+        var userInput = $("input").val();
+        console.log(userInput);
+        geocode(userInput, mapBoxToken)
+            .then(function (result) {
+                console.log(result);
+                marker.setLngLat(result);
+                map.flyTo({center: result});
+                getWeather();
+            });
+    });
 
 
 </script>
