adds from friday

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -7,7 +7,7 @@
 <body>
 <h1 id="heading" class="writing">Hunting Needs</h1>
 
- <p id="par" class="writing">You will need to get these essentials to go hunting!</p>
+ <p id="heading" class="writing">You will need to get these essentials to go hunting!</p>
 
      <ul id="ul" class="writing">Hunting Equipment</ul>
         <li id="weapon" class="equipment">Weapon of choice</li>
@@ -48,6 +48,8 @@ $(document).ready(function () {
     $('p').click(function () {
         $(this).css('font-size', "14px");
     });
+
+    console.log($("#heading"));
 });
 </script>
 </body>
